--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=91606a1223c3ee7e2424",
-    "/css/app.css": "/css/app.css?id=0fa65d91f47c239a0835"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
